@@ -6,6 +6,7 @@ Added new graphics for score and timer in gameplaystate
 Changed cursor to full screen. Have option to slide cursor instead of teleporting it, but feels sluggish at moment.
 Character portraits are cropped in 4:3 screen ratios, so they're less distorted
 Added menu sounds
+Added sounds for the start of a round
 
 8.28.13
 Added Game Start animation
